--- a/projet-cadre/index.html
+++ b/projet-cadre/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Mon application</title>
-  <base href="http://astefics.github.io/orleans">
+  <base href="https://astefics.github.io/orleans/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
