--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <!-- pour tester si Bootstrap fonctionne:
@@ -30,6 +31,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-<script src="runtime.3f0573fd31805d26.js" type="module"></script><script src="polyfills.ece086db916416fc.js" type="module"></script><script src="main.eba56b0e1923a49c.js" type="module"></script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime.3f0573fd31805d26.js" type="module"></script><script src="polyfills.ece086db916416fc.js" type="module"></script><script src="main.de5cda1feb38424f.js" type="module"></script>
 
 </body></html>
