--- a/index.html
+++ b/index.html
@@ -1,37 +1,23 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>Mon application</title>
+  <title>ProjetOrleansPWA</title>
   <base href="/orleans/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <!-- installer Bootstrap 
-  La ligne <link> suivante et la ligne <script> qui apparait apres <app-root> sont copiees
-  a partir de la page https://getbootstrap.com/ trouvee a l'aide de la recherche Google 'bootstrap'
-  -->
-
-  <!-- CSS only -->
+<!-- installer Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
-  <!-- pour tester si Bootstrap fonctionne:
-  - ajouter le bouton suivant 
-  - mettre en commentaire <app-root>
-  - tester, puis mettre le button en commentaire et décomenter app-root
-  -->
-
-  <!--
-  <button class="btn btn-danger mt-5 ms-5">Bouton Bootstrap</button>
-  -->
-
   <app-root></app-root>
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.3f0573fd31805d26.js" type="module"></script><script src="polyfills.ece086db916416fc.js" type="module"></script><script src="main.e8e28461e55dec2f.js" type="module"></script>
+<script src="runtime.6e61e455b71654dc.js" type="module"></script><script src="polyfills.77f011bb523f1fb4.js" type="module"></script><script src="main.f885abdb584e6e37.js" type="module"></script>
 
 </body></html>
